--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
+@import url("https://use.typekit.net/sof3uhk.css");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   background-color: #4e7cf7;
+  font-family: "freight-sans-compressed-pro", sans-serif;
+}
+
+[role="button"] {
+  cursor: pointer;
 }
