--- a/src/screens/StartScreen.css
+++ b/src/screens/StartScreen.css
@@ -1,6 +1,24 @@
 .start-screen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.start-button {
+    width: 148px;
+    height: 47px;
+    border-radius: 52px;
+    border-width: 4px;
+    background: #EF8521;
+    border-color: #012D5C;
+    border-style: solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
+    color: #fff;
+    text-transform: uppercase;
 }
