--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -3,4 +3,18 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  position: relative;
+}
+
+.popup {
+  display: none;
+  position: absolute;
+  width: 876px;
+  height: 588px;
+  background: white;
+  border: 4px solid black;
+  border-radius: 57px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
