--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -3,6 +3,13 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.game-map {
+  width: 1655px;
+  height: 1010px;
   position: relative;
 }
 
