--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -8,8 +8,8 @@
 }
 
 .game-map {
-  width: 1655px;
-  height: 1010px;
+  width: 1668px;
+  height: 1024px;
   position: relative;
 }
 
@@ -25,3 +25,47 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.interface-button {
+  width: 124px;
+  height: 40px;
+  padding: 7px 21px;
+  border-radius: 52px;
+  border-width: 3px;
+  border-color: #ffffff;
+  background: linear-gradient(90deg, #FF9D3E 0%, #F95610 100%);
+  color: #ffffff;
+  border-style: solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  position: absolute;
+  top: 39px;
+}
+
+.back-button {
+  gap: 7px;
+  left: 63px;
+}
+
+.back-button > svg {
+  flex-shrink: 0;
+}
+
+.back-button > span {
+  margin-top: -2px;
+}
+
+.coin-button {
+  right: 63px;
+}
+
+.coin-button .bigger {
+  font-size: 25px;
+}
+
+.coin-button > svg {
+  margin-left: 10px;
+}
+
