--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -13,6 +13,11 @@
   position: relative;
 }
 
+.game-map > img {
+  width: 100%;
+  height: 100%;
+}
+
 .popup {
   display: none;
   position: absolute;
