fix spaghetti position

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 body {
   background-color: #4e7cf7;
   font-family: "freight-sans-compressed-pro", sans-serif;
+  color: #FFFFFF;
 }
 
 [role="button"] {
