--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -3,8 +3,10 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   margin: 0 auto;
+  --scale: 1;
+  scale: var(--scale);
 }
 
 .game-map {
@@ -14,8 +16,7 @@
 }
 
 .game-map > img {
-  width: 100%;
-  height: 100%;
+
 }
 
 .popup {
