--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -115,6 +115,12 @@
   right: 63px;
 }
 
+.task-button {
+  left: 50%;
+  transform: translateX(-50%);
+  width: 200px;
+}
+
 .coin-button .text {
   width: 100%;
   height: 100%;
