refactor popup handling

--- a/src/screens/GameScreen.css
+++ b/src/screens/GameScreen.css
@@ -118,7 +118,8 @@
 .task-button {
   left: 50%;
   transform: translateX(-50%);
-  width: 200px;
+  width: max-content;
+  white-space: nowrap;
 }
 
 .coin-button .text {
